# ros_mediapipe

./: CMakeLists.txt  README.md  install.sh  package.xml  requirements.txt
launch/: mediapipe.launch
scripts/: ros_mediapipe.py
scripts/test/: test_face.py  test_hands.py  test_holistic.py  test_pose.py
