<?xml version="1.0"?>
<package format="2">
  <name>ros_mediapipe</name>
  <version>0.0.1</version>
  <description>ROS wrapper for MediaPipe</description>

  <maintainer email="lucafortini60@gmail.com">luca</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>human_skeleton_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>human_skeleton_msgs</exec_depend>

</package>
